@@ -1,9 +1,9 @@
 package org.gametheory.player;
 
-import org.gametheory.player.Player;
 import org.gametheory.strategy.Strategy;
 import org.gametheory.strategy.impl.*;
 
+import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Random;
@@ -11,14 +11,14 @@ import java.util.stream.Collectors;
 
 public class PlayerPopulation {
     public static List<Player> getCooperateAndDeflectPlayers() {
-        return List.of(
+        return Arrays.asList(
                 new Player(new AlwaysCooperateStrategy()),
                 new Player(new AlwaysDeflectStrategy())
         );
     }
 
     public static List<Player> getMixedButUniquePlayers() {
-        return List.of(
+        return Arrays.asList(
                 new Player(new AlwaysCooperateStrategy()),
                 new Player(new AlwaysDeflectStrategy()),
                 new Player(new OnlyRetaliateIfAttackedStrategy()),
@@ -41,7 +41,7 @@ public class PlayerPopulation {
     }
 
     public static List<Player> getOnlyNicePlayers() {
-        return List.of(
+        return Arrays.asList(
                 new Player(new AlwaysCooperateStrategy()),
                 new Player(new OnlyRetaliateIfAttackedStrategy()),
                 new Player(new OnlyRetaliateIfAttackedConsecutivelyStrategy())
